--- a/_whatsup/1.md
+++ b/_whatsup/1.md
@@ -1,1 +1,10 @@
+---
+title: "How to build this"
+collection: whatsup
+type: "What's up"
+permalink: /whatsup/1
+
+---
+
+This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
 
