Update and rename 2020-05-06-blog-post.md to 2020-05-06-blog-post-2.md

--- a/_posts/2020-05-06-blog-post-2.md
+++ b/_posts/2020-05-06-blog-post-2.md
@@ -1,11 +1,19 @@
-# How to build this
-----------
+---
+title: 'How to build this'
+date: 2020-05-06
+permalink: /posts/2020/05/blog-post-2/
+tags:
+  - github
+  - first website
+---
+
 
 This website is built using Github Page template for academic websites. This was forked (then detached) by [Stuart Geiger](https://github.com/staeiou) from the [Minimal Mistakes Jekyll Theme](https://mmistakes.github.io/minimal-mistakes/), which is © 2016 Michael Rose and released under the MIT License. See LICENSE.md.
 
 Another option is to fork [mine](https://github.com/samlaipolyu).
+---------
 
---
+
 ### Note: if you are using this repo and now get a notification about a security vulnerability, delete the Gemfile.lock file. 
 
 # Instructions
